syntax = "proto3";

package wyldlands.gateway;

// Gateway Management Service - Gateway-level operations
service GatewayManagement {
  // Authenticate gateway connection
  rpc AuthenticateGateway(AuthenticateGatewayRequest) returns (AuthenticateGatewayResponse);

  // Refresh gateway properties (banners, MOTD, etc.)
  rpc FetchGatewayProperties(GatewayPropertiesRequest) returns (GatewayPropertiesResponse);
  rpc FetchServerStatistics(ServerStatisticsRequest) returns (ServerStatisticsResponse);

  // Account management operations
  rpc CheckUsername(CheckUsernameRequest) returns (CheckUsernameResponse);
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);

  // Gateway-level heartbeat (for gateway-to-server connection health)
  rpc GatewayHeartbeat(GatewayHeartbeatRequest) returns (GatewayHeartbeatResponse);
}

// Session-to-World Service - Gateway sends session input to server
service SessionToWorld {
  // Authenticate session connection
  rpc AuthenticateSession(AuthenticateSessionRequest) returns (AuthenticateSessionResponse);

  // Send unified command (handles all session states: authentication, character selection,
  // character creation, gameplay, editing, etc.)
  // The server maintains session state and routes commands appropriately
  rpc SendInput(SendInputRequest) returns (SendInputResponse);

  // Call when in Edit mode to complete editing session
  rpc FinishEditing(EditResponse) returns (Empty);

  // Session lifecycle management
  rpc SessionDisconnected(SessionDisconnectedRequest) returns (Empty);
  rpc SessionReconnected(SessionReconnectedRequest) returns (SessionReconnectedResponse);
  rpc SessionHeartbeat(SessionHeartbeatRequest) returns (SessionHeartbeatResponse);
}

// Session-to-Gateway Service - Server sends output back to gateway
service WorldToSession {
  // Send prompt to client
  rpc SendPrompt(SendPromptRequest) returns (Empty);

  // Send output to client
  rpc SendOutput(SendOutputRequest) returns (Empty);

  // Begin Editing Mode on Session.
  rpc BeginEditing(EditRequest) returns(Empty);

  // Request session disconnect
  rpc DisconnectSession(DisconnectSessionRequest) returns (Empty);
}

// ============================================================================
// Authentication Messages
// ============================================================================

message AuthenticateGatewayRequest {
  string auth_key = 1;
}

message AuthenticateGatewayResponse {
  bool success = 1;
  optional string error = 2;
}

// ============================================================================
// Account Management Messages
// ============================================================================

message CheckUsernameRequest {
  string username = 1;
}

message CheckUsernameResponse {
  bool available = 1;
  optional string error = 2;
}

message CreateAccountRequest {
  string address = 1;
  string username = 2;
  string password = 3;
  map<string, string> properties = 4;
}

message CreateAccountResponse {
  bool success = 1;
  optional AccountInfo account = 2;
  optional string error = 3;
}

message AuthenticateSessionRequest {
  string session_id = 1;
  string username = 2;
  string password = 3;
  string client_addr = 4; // Client IP address from gateway
}

// Simplified authentication response - server sends character list via SendOutput
message AuthenticateSessionResponse {
  bool success = 1;
  optional AccountInfo account = 2;
  optional string error = 3;
}

// Basic account information for Logging
message AccountInfo {
  string id = 1;                      // Account UUID
  string login = 2;                   // Username/login
  bool active = 3;                    // Whether account is active
  string role = 4;                    // Account role (e.g., "player", "builder", "admin")
  map<string, string> properties = 5; // Account Properties
}

// ============================================================================
// Unified Command Messages (State Machine Based)
// ============================================================================

message SendInputRequest {
  string session_id = 1;
  string command = 2;
}

message SendInputResponse {
  bool success = 1;
  repeated GameOutput output = 2;
  optional string error = 3;
}

message SendOutputRequest {
  string session_id = 1;
  repeated GameOutput output = 2;
  optional string error = 3;
}

message SendPromptRequest {
  string session_id = 1;
  string prompt = 2;
}

message DisconnectSessionRequest {
  string session_id = 1;
  string reason = 2;
}

// Game output types - simplified to text, formatted text, and structured data
message GameOutput {
  oneof output_type {
    TextOutput text = 1;
    FormattedTextOutput formatted_text = 2;
    StructuredOutput structured = 3;
  }
}

message TextOutput {
  string content = 1;
}

message FormattedTextOutput {
  string content = 1;
  repeated FormatTag tags = 2;
}

message FormatTag {
  int32 start = 1;
  int32 end = 2;
  string format_type = 3;
  map<string, string> attributes = 4;
}

// Structured output for rich clients (WebSocket, MSDP, GMCP, etc.)
// Uses DataValue/DataTable/DataArray for flexible structured data
message StructuredOutput {
  string output_type = 1;  // e.g., "room", "combat", "character", "inventory", etc.
  DataValue data = 2;      // Structured data as DataValue (can be table, array, or string)
}

// Maps to JSON Value OR Mud Server Data Protocol Value
message DataValue {
  oneof data_value {
    string string_data = 1;
    DataTable table_data = 2;
    DataArray array_data = 3;
  }
}

// Maps to JSON Object or Mud Server Data Protocol Table
message DataTable {
  map<string, DataValue> entries = 1;
}

// Maps to JSON Array or Mud Server Data Protocol Array
message DataArray {
  repeated DataValue values = 1;
}

// ============================================================================
// Editor Response
// ============================================================================

message EditRequest {
  string session_id = 1;
  string title = 2;
  string content = 3;
}

message EditResponse {
  optional string content = 1;
}

// ============================================================================
// Session Lifecycle Messages
// ============================================================================

message SessionDisconnectedRequest {
  string session_id = 1;
}

message SessionReconnectedRequest {
  string session_id = 1;
  string old_session_id = 2;
}

message SessionReconnectedResponse {
  bool success = 1;
  optional string error = 2;
}

message SessionHeartbeatRequest {
  string session_id = 1;
}

message SessionHeartbeatResponse {
  bool success = 1;
  optional string error = 2;
}

message GatewayHeartbeatRequest {
  string gateway_id = 1;
}

message GatewayHeartbeatResponse {
  bool success = 1;
  optional string error = 2;
}

// ============================================================================
// Gateway Administration Messages
// ============================================================================

message GatewayPropertiesRequest {
  repeated string properties = 1;
}

message GatewayPropertiesResponse {
  map<string, string> properties = 1;
}

message ServerStatisticsRequest {
  repeated string statistics = 1;
}

message ServerStatisticsResponse {
  map<string, string> statistics = 1;
}

// ============================================================================
// Common Messages
// ============================================================================

message Empty {}